[package]
name = "libressl-errors"
version = "0.1.0"
authors = ["Steven Fackler <sfackler@gmail.com>", "Dubiousjim <dubiousjim@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Custom error library support for the libressl crate"
repository = "https://github.com/dubiousjim/rust-libressl"
readme = "README.md"
categories = ["api-bindings"]

[dependencies]
libc = "0.2"

libressl-sys = { version = "0.9.42", path = "../openssl-sys" }

[dev-dependencies]
libressl = { version = "0.10.19", path = "../openssl" }
