[package]
name = "libressl-sys"
version = "0.9.58"
authors = ["Alex Crichton <alex@alexcrichton.com>",
           "Steven Fackler <sfackler@gmail.com>",
           "Dubiousjim <dubiousjim@gmail.com>"]
license = "MIT"
description = "FFI bindings to LibreSSL"
repository = "https://github.com/dubiousjim/rust-libressl"
readme = "README.md"
categories = ["cryptography", "external-ffi-bindings"]
links = "openssl"
build = "build/main.rs"

[features]
vendored = ['libressl-src']

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
libressl-src = { path = "../../libressl-src", version = "312.0.0", optional = true } # FIXME
pkg-config = "0.3.9"
autocfg = "1.0"

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0.2.8"

# We don't actually use metadeps for annoying reasons but this is still here for tooling
[package.metadata.pkg-config]
libressl = "1.0.1"
