[package]
name = "libressl"
version = "0.10.29"
authors = ["Steven Fackler <sfackler@gmail.com>", "Dubiousjim <dubiousjim@gmail.com>"]
license = "Apache-2.0"
description = "LibreSSL bindings"
repository = "https://github.com/dubiousjim/rust-libressl"
readme = "README.md"
keywords = ["crypto", "tls", "ssl", "dtls"]
categories = ["cryptography", "api-bindings"]

vendored = ['libressl-sys/vendored']

[dependencies]
bitflags = "1.0"
cfg-if = "0.1"
foreign-types = "0.3.1"
lazy_static = "1"
libc = "0.2"

libressl-sys = { version = "0.9.55", path = "../openssl-sys" }

[dev-dependencies]
tempdir = "0.3"
hex = "0.3"
