[package]
name = "systest"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>",
           "Dubiousjim <dubiousjim@gmail.com>"]

[dependencies]
libc = "0.2"
libressl-sys = { path = "../openssl-sys" }

[build-dependencies]
ctest = "0.2"

[features]
vendored = ['libressl-sys/vendored']
